--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <section id="about-me" class="about-me regular-wrapper">
         <div>
           <img class="image" src="images/portrait.png"/>
+          <img class="image" src="images/bluesignature.png"/>
             <p>
                 <span class="bigText"></span>Hi, I’m Maggie McAuley and I’m
                 from Braintree Massachusetts. I’m a graphic design major studying at Umass Dartmouth.
@@ -118,7 +119,7 @@
             <section id="contact" class="contact content regular-wrapper">
                 <div class="contact-title"><h1>Contact</h1>
                 </div>
-                <div class="logo-svg"><img src="images/favicon.svg" alt=""></div>
+                <div class="logo-svg"><img src="images/purplelogo.png" alt=""></div>
                 <div class="contact-wrapper">
                     <p>617-650-4197</p>
                     <p>magalaga44@gmail.com</p>
