--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section id="images" class="image-gallery content regular-wrapper">
           <div class="box-wrapper box1 hovereffect">
             <div class="box-styling">
-            <a href="images/PROJ1/project_1.html">
+            <a href="images/PROJ1/proj1.jpg">
               <img src="images/PROJ1/proj1.jpg">
               <div class="overlay">
             <h2>Surrealist Project</h2>
@@ -46,7 +46,7 @@
       </div>   
          <div class="box-wrapper box2 hovereffect">
             <div class="box-styling">
-              <a href="images/PROJ2/project_2.html">
+              <a href="images/PROJ2/proj2.jpg">
                 <img src="images/PROJ2/proj2.jpg">
                 <div class="overlay">
             <h2>Font Pairing Project</h2>
@@ -57,7 +57,7 @@
          </div>        
          <div class="box-wrapper box3 hovereffect">
             <div class="box-styling">
-              <a href="images/PROJ3/project_3.html">
+              <a href="images/PROJ3/proj3.jpg">
                 <img src="images/PROJ3/proj3.jpg">
                 <div class="overlay">
             <h2>Font Pairing Inverted</h2>
@@ -68,7 +68,7 @@
          </div>       
         <div class="box-wrapper box4 hovereffect">
             <div class="box-styling">
-              <a href="images/PROJ4/project_4.html">
+              <a href="images/PROJ4/proj4.jpg">
                 <img src="images/PROJ4/proj4.jpg">
                 <div class="overlay">
             <h2>Collage</h2>
@@ -79,18 +79,18 @@
         </div>         
          <div class="box-wrapper box5 hovereffect">
             <div class="box-styling">
-            <a href="images/PROJ5/project_5.html">
+            <a href="images/PROJ5/proj5.pdf">
               <img src="images/PROJ5/proj5.pdf">
               <div class="overlay">
             <h2>Futura Project</h2>
-            <p>in my typography class, i designed a booklet , in which explained the origins of a font of my choice. i made illustrations with the font as well. this is only the cover.</p>
+            <p>for a typography class, i designed a booklet that explained the history of futura, including illustrations i made with it. this image is the cover, click for the whole booklet.</p>
           </div>
           </a>
           </div>
         </div>          
          <div class="box-wrapper box6 hovereffect">
             <div class="box-styling">
-              <a href="images/PROJ6/project_6.html">
+              <a href="images/PROJ6/proj6.pdf">
                 <img src="images/PROJ6/proj6.pdf">
                 <div class="overlay">
            <h2>My Logo</h2>
@@ -104,7 +104,7 @@
           <img class="image" src="images/portrait.png"/>
           <img class="image" src="images/bluesignature.png"/>
             <p>
-                <span class="bigText"></span>Hi, I’m Maggie McAuley and I’m
+                <span class="bigText"></span>Hi, I’m Margaret McAuley, you can call me Maggie too. I’m
                 from Braintree Massachusetts. I’m a graphic design major studying at Umass Dartmouth.
                 I’ve been doing graphic design since I was a junior in highschool. I also love video
                 editing/motion graphics and photography. I love using Adobe Photoshop, Illustrator,
@@ -130,30 +130,10 @@
             <!-- footer -->
               <footer class="parallax bg3 content regular-wrapper2">
                 <ul>
-                  <!-- instagram -->
-                  <li>
-                    <a href="#"
-                      ><svg
-                        aria-hidden="true"
-                        focusable="false"
-                        data-prefix="fab"
-                        data-icon="instagram"
-                        class="svg-inline--fa fa-instagram fa-w-14 social-media"
-                        role="img"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 448 512"
-                      >
-                        <path
-                          fill="currentColor"
-                          d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
-                        ></path>
-                      </svg>
-                    </a>
-                    <p>posts</p>
-                  </li>
+                
                   <!-- github -->
                   <li>
-                    <a href="#"
+                    <a href="https://github.com/mmmcauley"
                       ><svg
                         id="github"
                         aria-hidden="true"
@@ -175,7 +155,7 @@
                   </li>
                   <!-- linked in -->
                   <li>
-                    <a href="#"
+                    <a href="https://www.linkedin.com/in/margaret-mcauley-b05325211/"
                       ><svg
                         aria-hidden="true"
                         focusable="false"
